Tidied up base, test, and dnnl.