@@ -6,33 +6,22 @@
 ;;   the terms of this license.
 ;;   You must not remove this notice, or any other, from this software.
 
-(defproject org.uncomplicate/deep-diamond-base "0.33.0-SNAPSHOT"
+(defproject org.uncomplicate/deep-diamond-test "0.33.0-SNAPSHOT"
   :description "Fast Clojure Deep Learning Library"
   :author "Dragan Djuric"
   :url "http://github.com/uncomplicate/deep-diamond"
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
   :dependencies [[org.clojure/clojure "1.12.0"]
-                 [org.uncomplicate/neanderthal-base "0.54.0-SNAPSHOT"]]
+                 [org.uncomplicate/neanderthal-base "0.54.0-SNAPSHOT"]
+                 [org.uncomplicate/deep-diamond-base "0.33.0-SNAPSHOT"]]
 
-  :profiles {:dev {:plugins [[lein-codox "0.10.8"]]
-                   :resource-paths ["data"]
+  :profiles {:dev {:plugins [[lein-midje "3.2.1"]]
                    :global-vars {*warn-on-reflection* true
                                  *assert* false
                                  *unchecked-math* :warn-on-boxed
                                  *print-length* 128}
-                   :dependencies [[codox-theme-rdash "0.1.2"]]
-                   :codox {:metadata {:doc/format :markdown}
-                           :source-uri "http://github.com/uncomplicate/deep-diamond/blob/master/{filepath}#L{line}"
-                           :themes [:rdash]
-                           :namespaces [uncomplicate.diamond.tensor
-                                        uncomplicate.diamond.dnn
-                                        uncomplicate.diamond.metrics
-                                        uncomplicate.diamond.native
-                                        uncomplicate.diamond.internal.protocols]
-                           :output-path "../docs/codox"}
-
-                   :jvm-opts ^:replace ["-Dclojure.compiler.direct-linking=true" "-Djdk.attach.allowAttachSelf"]}}
+                   :dependencies [[midje "1.10.10"]]}}
 
   :repositories [["snapshots" "https://oss.sonatype.org/content/repositories/snapshots"]]
 
